@@ -41,13 +41,7 @@
 			<properties>
 				<jvm.args.perm.size>-XX:MaxMetaspaceSize=128m</jvm.args.perm.size>
 				<jvm.args.gc.log.path>-Xlog:gc*:logs/gc_%p_%t.log:time,level,tags:filecount=5,filesize=10M</jvm.args.gc.log.path>
-				<!-- TODO Remove these properties -->
-				<jvm.args.print.heap.at.gc>-Dummy=Dummy</jvm.args.print.heap.at.gc>
-				<jvm.args.print.gc.details>-Dummy=Dummy</jvm.args.print.gc.details>
-				<jvm.args.print.gc.date.stamps>-Dummy=Dummy</jvm.args.print.gc.date.stamps>
-				<jvm.args.gc.log.file.rotation>-Dummy=Dummy</jvm.args.gc.log.file.rotation>
-				<jvm.args.number.of.gc.log.files>-Dummy=Dummy</jvm.args.number.of.gc.log.files>
-				<jvm.args.gc.log.file.size>-Dummy=Dummy</jvm.args.gc.log.file.size>
+				<!-- Removed the "Dummy" properties -->
 			</properties>
 		</profile>
 	</profiles>
@@ -165,28 +159,13 @@
 				</executions>
 			</plugin>
 			<plugin>
-   <groupId>org.owasp</groupId>
-   <artifactId>dependency-check-maven</artifactId>
-   <version>6.1.6</version>
-   <configuration>
-      <format>ALL</format>
-      <!--    <failBuildOnCVSS>8</failBuildOnCVSS>
-   
-   
-			      use internal mirroring of CVE contents 
-			      Suppress files 
-			      E.g. a company-wide suppression file and local project file 
-			     -->
-      <!-- 
-			     <cveUrlModified>http://internal-mirror.mycorp.com/nvdcve-1.1-modified.json.gz</cveUrlModified>  
-			                    <cveUrlBase>http://internal-mirror.mycorp.com/nvdcve-1.1-%d.json.gz</cveUrlBase>
-			     <suppressionFiles>               
-			                        <suppressionFile>http://example.org/suppression.xml</suppressionFile>
-			                        <suppressionFile>project-suppression.xml</suppressionFile> 
-			                    </suppressionFiles> 
-			                 -->
-   </configuration>
-</plugin>
+				<groupId>org.owasp</groupId>
+				<artifactId>dependency-check-maven</artifactId>
+				<version>6.1.6</version>
+				<configuration>
+					<format>ALL</format>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
@@ -205,147 +184,12 @@
 								<copy file="${basedir}/src/main/resources/indexpage_en.properties"
 									tofile="${project.build.outputDirectory}/indexpage.properties" />
 								<delete
-									file="${project.build.outputDirectory}/org/t246osslab/easybuggy/core/utils/DeleteClassWhileMavenBuild.class" />
+									file="${project.build.outputDirectory}/org/t246osslab/easybuggy/core/messages.properties" />
 							</tasks>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>3.3.1</version>
-				<configuration>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
-					<warName>ROOT</warName>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.1</version>
-				<executions>
-					<execution>
-						<id>tomcat-run</id>
-						<goals>
-							<goal>exec-war-only</goal>
-						</goals>
-						<phase>package</phase>
-						<configuration>
-							<path>/</path>
-							<enableNaming>true</enableNaming>
-							<finalName>easybuggy.jar</finalName>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.2</version>
-				<executions>
-					<execution>
-						<id>startup-uber-start</id>
-						<phase>install</phase>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<configuration>
-							<classpathScope>test</classpathScope>
-							<executable>java</executable>
-							<arguments>
-								<argument>${jvm.args.perm.size}</argument>
-								<argument>${jvm.args.gc.log.path}</argument>
-								<argument>-Xmx256m</argument>
-								<argument>-XX:MaxDirectMemorySize=90m</argument>
-								<argument>-XX:+UseSerialGC</argument>
-								<argument>${jvm.args.print.heap.at.gc}</argument>
-								<argument>${jvm.args.print.gc.details}</argument>
-								<argument>${jvm.args.print.gc.date.stamps}</argument>
-								<argument>${jvm.args.gc.log.file.rotation}</argument>
-								<argument>${jvm.args.number.of.gc.log.files}</argument>
-								<argument>${jvm.args.gc.log.file.size}</argument>
-								<argument>-XX:GCTimeLimit=15</argument>
-								<argument>-XX:GCHeapFreeLimit=50</argument>
-								<argument>-XX:+HeapDumpOnOutOfMemoryError</argument>
-								<argument>-XX:HeapDumpPath=logs/</argument>
-								<argument>-XX:ErrorFile=logs/hs_err_pid%p.log</argument>
-								<!-- <argument>-XX:NativeMemoryTracking=summary</argument> -->
-								<!-- Auto kill JVM when OOME occurs: For post-8u92 JDKs -->
-								<!-- <argument>-XX:+CrashOnOutOfMemoryError</argument> -->
-								<!-- Auto kill JVM when OOME occurs: For Linux -->
-								<!-- <argument>-XX:OnOutOfMemoryError="kill -9 %p"</argument> -->
-								<!-- Auto kill JVM when OOME occurs: For Windows -->
-								<!-- -XX:OnOutOfMemoryError=taskkill /F /PID %p -->
-								<!-- UnlockCommercialFeatures/FlightRecorder: For Oracle Java commercial use -->
-								<!-- <argument>-XX:+UnlockCommercialFeatures</argument> <argument>-XX:+FlightRecorder</argument> -->
-								<!-- <argument>-agentpath:/root/eclipse/plugins/org.zeroturnaround.eclipse.embedder_7.0.8.RELEASE/jrebel/lib/libjrebel64.so</argument> -->
-								<argument>-agentlib:jdwp=transport=dt_socket,server=y,address=9009,suspend=n</argument>
-								<argument>-Dderby.stream.error.file=logs/derby.log</argument>
-								<argument>-Dderby.infolog.append=true</argument>
-								<argument>-Dderby.language.logStatementText=true</argument>
-								<argument>-Dderby.locks.deadlockTrace=true</argument>
-								<argument>-Dderby.locks.monitor=true</argument>
-								<argument>-Dderby.storage.rowLocking=true</argument>
-								<argument>-Dcom.sun.management.jmxremote</argument>
-								<argument>-Dcom.sun.management.jmxremote.port=7900</argument>
-								<argument>-Dcom.sun.management.jmxremote.ssl=false</argument>
-								<argument>-Dcom.sun.management.jmxremote.authenticate=false</argument>
-								<!-- <argument>-Djava.security.manager</argument>
-								<argument>-Djava.security.policy=catalina.policy</argument> -->
-								<!-- <argument>-Deasybuggy.mode=only-vulnerabilities</argument> -->
-								<argument>-ea</argument>
-								<argument>-jar</argument>
-								<argument>target/easybuggy.jar</argument>
-								<argument>-httpPort=${easybuggy-port}</argument>
-							</arguments>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<!--# Changes for Software Composition Analysis Scan using Snyk
-#By ASecurityGuru
--->
-    <plugin>
-      <groupId>io.snyk</groupId>
-      <artifactId>snyk-maven-plugin</artifactId>
-      <version>2.0.0</version>
-      <inherited>false</inherited>
-      <configuration>
-        <org>asecurityguru</org>
-      </configuration>
-    </plugin>
-<!-- Snyk Changes for SCA Ends Here -->
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-antrun-plugin
-										</artifactId>
-										<versionRange>[1.3,)</versionRange>
-										<goals>
-											<goal>run</goal>
-										</goals>
-									</pluginExecutionFilter>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 	</build>
 </project>
